--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@ ines (29 sloc)  825 Bytes
 <Html> 
       
 <Head> 
-      <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-35KHYJLC3Z"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JJMFZKXCG0"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-35KHYJLC3Z');
+  gtag('config', 'G-JJMFZKXCG0');
 </script>
- 
+      
 <Title>     
 Create a Login form   
 </Title>  
