--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@ Create a Login form
 </Title>  
 </Head>  
 <Body>   
+      <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KTXNNHB"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 The following tags are used in this Html code for creating the Login form:  
 <form>  
 <label>User Id: </label> <br>  
